- add replacements of Path.of causing issues with Samsung devices on mobile